--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -65,9 +65,24 @@ jobs:
       uses: github/codeql-action/init@v3
       with:
         languages: python
+      continue-on-error: true
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
+      continue-on-error: true
+
+    # Alternative Security Scanning
+    - name: Alternative Security Scan with Semgrep
+      run: |
+        pip install semgrep
+        semgrep --config=auto app/ --json --output=semgrep-results.json || true
+        semgrep --config=auto app/ || exit 1
+
+    - name: Alternative Secret Scanning
+      run: |
+        pip install detect-secrets
+        detect-secrets scan --all-files . --baseline .secrets.baseline || true
+        detect-secrets audit .secrets.baseline || exit 1
 
     # Secret Scanning
     - name: Run GitLeaks
@@ -90,12 +105,33 @@ jobs:
         image-ref: '${{ env.IMAGE_NAME }}:${{ github.sha }}'
         format: 'sarif'
         output: 'trivy-results.sarif'
+      continue-on-error: true
+
+    - name: Check if Trivy results exist
+      id: check-trivy
+      run: |
+        if [ -f "trivy-results.sarif" ]; then
+          echo "trivy_exists=true" >> $GITHUB_OUTPUT
+        else
+          echo "trivy_exists=false" >> $GITHUB_OUTPUT
+        fi
 
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      if: steps.check-trivy.outputs.trivy_exists == 'true'
       with:
         sarif_file: 'trivy-results.sarif'
+      continue-on-error: true
+
+    - name: Run Trivy vulnerability scanner (table format)
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: '${{ env.IMAGE_NAME }}:${{ github.sha }}'
+        format: 'table'
+        exit-code: '1'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
 
     # Authenticate with Google Cloud
     - name: Authenticate to Google Cloud
@@ -167,9 +203,20 @@ jobs:
         framework: terraform
         output_format: sarif
         output_file_path: checkov-results.sarif
+      continue-on-error: true
+
+    - name: Check if Checkov results exist
+      id: check-checkov
+      run: |
+        if [ -f "checkov-results.sarif" ]; then
+          echo "checkov_exists=true" >> $GITHUB_OUTPUT
+        else
+          echo "checkov_exists=false" >> $GITHUB_OUTPUT
+        fi
 
     - name: Upload Checkov scan results
       uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      if: steps.check-checkov.outputs.checkov_exists == 'true'
       with:
-        sarif_file: 'checkov-results.sarif' 
+        sarif_file: 'checkov-results.sarif'
+      continue-on-error: true 
