--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -52,8 +52,8 @@ jobs:
     # Static Application Security Testing (SAST)
     - name: Run Bandit Security Scan
       run: |
-        bandit -r app/ -f json -o bandit-report.json || true
-        bandit -r app/ -f txt || exit 1
+        bandit -r app/ -f json -o bandit-report.json --severity-level MEDIUM || true
+        bandit -r app/ -f txt --severity-level MEDIUM || exit 1
 
     - name: Check for known security vulnerabilities
       run: |
