--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -56,11 +56,10 @@ jobs:
         bandit -r app/ -f txt --severity-level medium || exit 1
 
     - name: Check for known security vulnerabilities
-      env:
-        SAFETY_API_KEY: ${{ secrets.SAFETY_API_KEY }}
-      run: |
-        safety scan --full-report --output json --output-format json || true
-        safety scan --full-report || exit 1
+      uses: pyupio/safety-action@v1
+      with:
+        api-key: ${{ secrets.SAFETY_API_KEY }}
+        args: --detailed-output --output-format json
 
     # GitHub Security Features
     - name: Initialize CodeQL
