--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -15,6 +15,7 @@ env:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    environment: gcp 
     permissions:
       contents: read
       security-events: write
