--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -158,7 +158,7 @@ jobs:
 
   deploy:
     environment: gcp 
-    needs: build-and-test
+    #needs: build-and-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     
@@ -180,9 +180,10 @@ jobs:
           --zone ${{ secrets.GKE_CLUSTER_ZONE }}
 
     # Deploy to Kubernetes
-    - name: Install gke-gcloud-auth-plugin
+    - name: Install GKE Auth Plugin
       run: |
-        gcloud components install gke-gcloud-auth-plugin
+        sudo apt-get update
+        sudo apt-get install google-cloud-cli-gke-gcloud-auth-plugin
 
     - name: Deploy to Kubernetes
       run: |
