--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -180,19 +180,9 @@ jobs:
           --zone ${{ secrets.GKE_CLUSTER_ZONE }}
 
     # Deploy to Kubernetes
-    - name: Install GKE Auth Plugin (arch-aware)
+    - name: Install GKE Auth Plugin manually
       run: |
-        ARCH=$(uname -m)
-        if [ "$ARCH" = "x86_64" ]; then
-          BINARY_URL="https://storage.googleapis.com/artifacts.gke.io/gke-gcloud-auth-plugin/latest/gke-gcloud-auth-plugin-linux-amd64"
-        elif [ "$ARCH" = "aarch64" ]; then
-          BINARY_URL="https://storage.googleapis.com/artifacts.gke.io/gke-gcloud-auth-plugin/latest/gke-gcloud-auth-plugin-linux-arm64"
-        else
-          echo "Unsupported architecture: $ARCH"
-          exit 1
-        fi
-
-        curl -Lo gke-gcloud-auth-plugin "$BINARY_URL"
+        curl -Lo gke-gcloud-auth-plugin https://storage.googleapis.com/artifacts.gke.io/gke-gcloud-auth-plugin/latest/gke-gcloud-auth-plugin-linux-amd64
         chmod +x gke-gcloud-auth-plugin
         sudo mv gke-gcloud-auth-plugin /usr/local/bin/
 
@@ -200,7 +190,7 @@ jobs:
     - name: Deploy to Kubernetes
       run: |
         envsubst < k8s/deployment.yaml | kubectl apply -f -
-        kubectl apply -f k8s/service.yaml
+        kubectl apply --validate=false -f k8s/service.yaml
         kubectl rollout status deployment/fastapi-app
       env:
         IMAGE_TAG: ${{ github.sha }}
