--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -189,7 +189,7 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: |
-        envsubst < k8s/deployment.yaml | kubectl apply -f -
+        envsubst < k8s/deployment.yaml | kubectl apply --validate=false -f -
         kubectl apply --validate=false -f k8s/service.yaml
         kubectl rollout status deployment/fastapi-app
       env:
