--- a/k8s/gatekeeper/constraint.yaml
+++ b/k8s/gatekeeper/constraint.yaml
@@ -12,4 +12,4 @@ spec:
   parameters:
     registries:
       - "us-central1-docker.pkg.dev/cmpe58e-460900/devsecops-repo/"
-      - "gcr.io/YOUR_PROJECT_ID/" 
+      - "gcr.io/cmpe58e-460900/" 
