--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: fastapi-app
 spec:
-  replicas: 3
+  replicas: 1  # Reduced for faster deployment in limited clusters
   selector:
     matchLabels:
       app: fastapi-app
@@ -14,47 +14,46 @@ spec:
       labels:
         app: fastapi-app
       annotations:
-        # This annotation will be used by OPA Gatekeeper
         allowed-registry: "us-central1-docker.pkg.dev"
     spec:
       imagePullSecrets:
-      - name: gcp-artifact-registry-secret
+        - name: gcp-artifact-registry-secret
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         fsGroup: 1000
       containers:
-      - name: fastapi-app
-        image: ${REGISTRY_URL}/fastapi-app:${IMAGE_TAG}
-        ports:
-        - containerPort: 8000
-        env:
-        - name: ENV
-          value: "production"
-        securityContext:
-          allowPrivilegeEscalation: false
-          readOnlyRootFilesystem: true
-          runAsNonRoot: true
-          runAsUser: 1000
-          capabilities:
-            drop:
-            - ALL
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8000
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8000
-          initialDelaySeconds: 5
-          periodSeconds: 5 
+        - name: fastapi-app
+          image: ${REGISTRY_URL}/fastapi-app:${IMAGE_TAG}
+          ports:
+            - containerPort: 8000
+          env:
+            - name: ENV
+              value: "production"
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 1000
+            capabilities:
+              drop:
+                - ALL
+          resources:
+            requests:
+              memory: "32Mi"  # Lowered for easier scheduling
+              cpu: "10m"
+            limits:
+              memory: "128Mi"
+              cpu: "100m"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 5
