--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.115.12 # TODO: Safety security check correct: 0.115.12 fail: 0.104.1
+fastapi==0.115.12 # TODO: 4- Safety security check correct: 0.115.12 fail: 0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pytest==7.4.3
